# AutoVision

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  tox.ini
.claude/: folder_structure.md  implementation_plan.md  prd.md  project_plan.md  prs.md
.devcontainer/: devcontainer.json  post_create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  nightly.yml  test-pr.yml
config/: default.yaml
docs/: TESTING.md
scripts/: example.py
src/autovision/: __init__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py
tools/: run_tool.py
